# ConnectedBot

./: .gitignore  README.md
connected_bot_app/: CMakeLists.txt  README.md  package.xml
connected_bot_app/action/: photo.action
connected_bot_app/include/: ImageSegmentationColor.h  mainwindow.h  show_robot_camera_node.h
connected_bot_app/launch/: raspi_camera.launch  start_all.launch  webcam.launch
connected_bot_app/scripts/: CameraCalibration.py  joystick_node.py  show_robot_camera_node.py
connected_bot_app/src/: ImageSegmentationColor.cpp  mainwindow.cpp  mainwindow.ui  show_robot_camera_node.cpp
connected_bot_fw/: CMakeLists.txt  package.xml
connected_bot_fw/firmware/: CMakeLists.txt  main.cpp
connected_bot_fw/firmware/application/: DistanceSensor.cpp  DistanceSensor.h
